--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^3.11.2
   google_fonts: ^3.0.1
+  firebase_core: ^1.24.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
