--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^3.11.2
   google_fonts: ^3.0.1
   firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
