--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: ^3.0.1
   firebase_core: ^1.24.0
   cloud_firestore: ^3.5.1
+  excel: ^2.0.0-null-safety-3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
